--- a/PoisonMaster/PoisonMaster.csproj
+++ b/PoisonMaster/PoisonMaster.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Blacklist\Blacklist.cs" />
+    <Compile Include="State\Helpers.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\BuyArrows.cs" />
