--- a/PoisonMaster/PoisonMaster.csproj
+++ b/PoisonMaster/PoisonMaster.csproj
@@ -34,17 +34,29 @@
     <Reference Include="DatabaseManager">
       <HintPath>..\..\..\Bin\DatabaseManager.dll</HintPath>
     </Reference>
+    <Reference Include="MahApps.Metro">
+      <HintPath>..\..\..\Products\MahApps.Metro.dll</HintPath>
+    </Reference>
+    <Reference Include="MarsSettingsGUI">
+      <HintPath>C:\Users\Daniel\Documents\Visual Studio 2017\Projects\AIO\Dependencies\MarsSettingsGUI.dll</HintPath>
+    </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="robotManager">
       <HintPath>..\..\..\Bin\robotManager.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
     <Reference Include="wManager, Version=1.0.0.22385, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\Bin\wManager.dll</HintPath>
@@ -52,12 +64,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Blacklist\Blacklist.cs" />
+    <Compile Include="Database\Database.cs" />
+    <Compile Include="Database\DatabaseNPC.cs" />
+    <Compile Include="Settings\Settings.cs" />
+    <Compile Include="State\BuyDrink.cs" />
+    <Compile Include="State\BuyFood.cs" />
+    <Compile Include="State\Repair.cs" />
     <Compile Include="State\Helpers.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\BuyArrows.cs" />
     <Compile Include="State\BuyPoison.cs" />
+    <Compile Include="State\Sell.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterCompile">
     <Exec Command="if &quot;$(ConfigurationName)&quot; == &quot;Release&quot; (&quot;$(ProjectDir)_ConfuserEx\Confuser.CLI.exe&quot; &quot;$(ProjectDir)_ConfuserEx\c.crproj&quot;)&#xD;&#xA;" />
