--- a/PoisonMaster/WholesomeManager.csproj
+++ b/PoisonMaster/WholesomeManager.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{7A726A5B-7BB2-4204-9555-0C19984A9377}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PoisonMaster</RootNamespace>
-    <AssemblyName>PoisonMaster</AssemblyName>
+    <RootNamespace>WholesomeManager</RootNamespace>
+    <AssemblyName>WholesomeManager</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -63,23 +63,40 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Blacklist\Blacklist.cs" />
+    <Compile Include="Blacklist\NPCBlackList.cs" />
     <Compile Include="Database\Database.cs" />
     <Compile Include="Database\DatabaseNPC.cs" />
     <Compile Include="Database\PoisonNPC.cs" />
     <Compile Include="Database\PoisonVendors.cs" />
+    <Compile Include="Helpers.cs" />
+    <Compile Include="PMEnums.cs" />
     <Compile Include="Settings\Settings.cs" />
-    <Compile Include="State\BuyDrink.cs" />
-    <Compile Include="State\BuyFood.cs" />
-    <Compile Include="State\Repair.cs" />
-    <Compile Include="State\Helpers.cs" />
+    <Compile Include="State\BuyAmmoState.cs" />
+    <Compile Include="State\BuyDrinkState.cs" />
+    <Compile Include="State\BuyFoodState.cs" />
+    <Compile Include="State\BuyPoisonState.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="State\BuyArrows.cs" />
-    <Compile Include="State\BuyPoison.cs" />
-    <Compile Include="State\Sell.cs" />
+    <Compile Include="State\RepairState.cs" />
+    <Compile Include="State\SellItemsState.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="_ConfuserEx\c.crproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="_ConfuserEx\CommonServiceLocator.dll" />
+    <Content Include="_ConfuserEx\Confuser.CLI.exe" />
+    <Content Include="_ConfuserEx\Confuser.Core.dll" />
+    <Content Include="_ConfuserEx\Confuser.DynCipher.dll" />
+    <Content Include="_ConfuserEx\Confuser.Protections.dll" />
+    <Content Include="_ConfuserEx\Confuser.Renamer.dll" />
+    <Content Include="_ConfuserEx\Confuser.Runtime.dll" />
+    <Content Include="_ConfuserEx\dnlib.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Debug\" />
+    <Folder Include="bin\Release\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="AfterCompile">
     <Exec Command="if &quot;$(ConfigurationName)&quot; == &quot;Release&quot; (&quot;$(ProjectDir)_ConfuserEx\Confuser.CLI.exe&quot; &quot;$(ProjectDir)_ConfuserEx\c.crproj&quot;)&#xD;&#xA;" />
