--- a/PoisonMaster/Wholesome_Vendors.csproj
+++ b/PoisonMaster/Wholesome_Vendors.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\RepairState.cs" />
+    <Compile Include="State\TrainerState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="_ConfuserEx\c.crproj" />
@@ -103,4 +104,7 @@
   <Target Name="AfterCompile">
     <Exec Command="if &quot;$(ConfigurationName)&quot; == &quot;Release&quot; (&quot;$(ProjectDir)_ConfuserEx\Confuser.CLI.exe&quot; &quot;$(ProjectDir)_ConfuserEx\c.crproj&quot;)&#xD;&#xA;" />
   </Target>
+  <PropertyGroup>
+    <PostBuildEvent>copy /Y "$(TargetDir)\Wholesome_Vendors.dll" "$(SolutionDir)\PoisonMaster\Compiled\Wholesome_Vendors.dll"</PostBuildEvent>
+  </PropertyGroup>
 </Project>
