--- a/PoisonMaster/Wholesome_Vendors.csproj
+++ b/PoisonMaster/Wholesome_Vendors.csproj
@@ -79,7 +79,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\RepairState.cs" />
-    <Compile Include="State\TrainerState.cs" />
+    <Compile Include="State\TrainingState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="_ConfuserEx\c.crproj" />
