--- a/PoisonMaster/Wholesome_Vendors_zero.csproj
+++ b/PoisonMaster/Wholesome_Vendors_zero.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State\BuyAmmoState.cs" />
     <Compile Include="State\BuyPoisonState.cs" />
+    <Compile Include="State\TrainingState.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Compiled\Version.txt" />
