--- a/PoisonMaster/Wholesome_Vendors.csproj
+++ b/PoisonMaster/Wholesome_Vendors.csproj
@@ -50,6 +50,9 @@
     <Reference Include="Costura, Version=5.0.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Costura.Fody.5.0.2\lib\netstandard1.0\Costura.dll</HintPath>
     </Reference>
+    <Reference Include="Dapper, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.2.0.123\lib\net461\Dapper.dll</HintPath>
+    </Reference>
     <Reference Include="DatabaseManager">
       <HintPath>..\Dependencies\DatabaseManager.dll</HintPath>
     </Reference>
@@ -69,6 +72,9 @@
       <HintPath>..\packages\Microsoft.Win32.Primitives.4.3.0\lib\net46\Microsoft.Win32.Primitives.dll</HintPath>
       <Private>True</Private>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
@@ -229,15 +235,15 @@
   <ItemGroup>
     <Compile Include="AutoUpdater.cs" />
     <Compile Include="Blacklist\NPCBlackList.cs" />
-    <Compile Include="Database\Database.cs" />
-    <Compile Include="Database\DatabaseNPC.cs" />
-    <Compile Include="Database\DB.cs" />
     <Compile Include="Database\DBUpdater.cs" />
-    <Compile Include="Database\GameObject.cs" />
-    <Compile Include="Database\PoisonNPC.cs" />
-    <Compile Include="Database\PoisonVendors.cs" />
+    <Compile Include="Database\MemoryDB.cs" />
+    <Compile Include="Database\Models\ModelCreature.cs" />
+    <Compile Include="Database\Models\ModelCreatureTemplate.cs" />
+    <Compile Include="Database\Models\ModelGameObject.cs" />
+    <Compile Include="Database\Models\ModelGameObjectTemplate.cs" />
+    <Compile Include="Database\Models\ModelItemTemplate.cs" />
+    <Compile Include="Database\Models\ModelNpcVendor.cs" />
     <Compile Include="Helpers.cs" />
-    <Compile Include="PMEnums.cs" />
     <Compile Include="Settings\Settings.cs" />
     <Compile Include="State\BuyAmmoState.cs" />
     <Compile Include="State\BuyDrinkState.cs" />
@@ -245,7 +251,7 @@
     <Compile Include="State\BuyPoisonState.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="State\RepairState.cs" />
+    <Compile Include="State\SellRepairState.cs" />
     <Compile Include="State\TrainingState.cs" />
   </ItemGroup>
   <ItemGroup>
