--- a/PoisonMaster/Wholesome_Vendors.csproj
+++ b/PoisonMaster/Wholesome_Vendors.csproj
@@ -235,6 +235,7 @@
   <ItemGroup>
     <Compile Include="AutoUpdater.cs" />
     <Compile Include="Blacklist\NPCBlackList.cs" />
+    <Compile Include="Database\Models\ModelNpcTrainer.cs" />
     <Compile Include="Database\Models\ModelSpell.cs" />
     <Compile Include="Database\PluginCache.cs" />
     <Compile Include="Database\DBUpdater.cs" />
@@ -251,6 +252,7 @@
     <Compile Include="State\BuyBagsState.cs" />
     <Compile Include="State\BuyDrinkState.cs" />
     <Compile Include="State\BuyFoodState.cs" />
+    <Compile Include="State\BuyMountState.cs" />
     <Compile Include="State\BuyPoisonState.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
