--- a/Wholesome_Vendors/Wholesome_Vendors.csproj
+++ b/Wholesome_Vendors/Wholesome_Vendors.csproj
@@ -66,14 +66,15 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="MahApps.Metro">
-      <HintPath>..\..\WRobot\Bin\MahApps.Metro.dll</HintPath>
+      <HintPath>..\Dependencies\MahApps.Metro.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="MarsSettingsGUI">
       <HintPath>..\Special_Deps\MarsSettingsGUI.dll</HintPath>
     </Reference>
     <Reference Include="MemoryRobot">
-      <HintPath>..\..\WRobot\Bin\MemoryRobot.dll</HintPath>
+      <HintPath>..\Dependencies\MemoryRobot.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.Win32.Primitives, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Win32.Primitives.4.3.0\lib\net46\Microsoft.Win32.Primitives.dll</HintPath>
@@ -87,10 +88,11 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="RDManaged">
-      <HintPath>..\..\WRobot\Bin\RDManaged.dll</HintPath>
+      <HintPath>..\Dependencies\RDManaged.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="robotManager">
-      <HintPath>..\..\WRobot\Bin\robotManager.dll</HintPath>
+      <HintPath>..\Dependencies\robotManager.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="System" />
@@ -243,7 +245,7 @@
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="wManager">
-      <HintPath>..\..\WRobot\Bin\wManager.dll</HintPath>
+      <HintPath>..\Dependencies\wManager.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
