--- a/Wholesome_Vendors/Wholesome_Vendors.csproj
+++ b/Wholesome_Vendors/Wholesome_Vendors.csproj
@@ -282,6 +282,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Compiled\Auto_Version.txt" />
     <Content Include="Compiled\Version.txt" />
     <Content Include="Compiled\Wholesome_Vendors.dll" />
   </ItemGroup>
@@ -330,7 +331,7 @@
 			PostBuildMacros;
 		</PostBuildEventDependsOn>
     <PostBuildEvent>copy /Y "$(TargetDir)\$(ProjectName).dll" "$(SolutionDir)\Wholesome_Vendors\Compiled\Wholesome_Vendors.dll
-echo Writing assembly version in Version.txt: @(VersionNumber)
-echo @(VersionNumber) &gt; $(ProjectDir)\Compiled\Version.txt</PostBuildEvent>
+echo Writing assembly version in Auto_Version.txt: @(VersionNumber)
+echo @(VersionNumber) &gt; $(ProjectDir)\Compiled\Auto_Version.txt</PostBuildEvent>
   </PropertyGroup>
 </Project>
